<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_open">Open</string>
    <string name="action_copy">Copy</string>
    <!-- Detail -->
    <string name="detail_init_error">Problem retrieving item details</string>
    <string name="top_bar_edit_button_text">Edit</string>
    <!-- Alias details -->
    <string name="field_alias_title">Alias address</string>
    <string name="field_alias_disabled_title">Alias address (disabled)</string>
    <string name="alias_copied_to_clipboard">Alias copied</string>
    <string name="alias_detail_field_mailboxes_title">Forwarding to</string>
    <string name="alias_create_login_from_alias">Create login</string>
    <!-- Note details -->
    <string name="field_detail_note_title">Note</string>
    <string name="note_detail_copy_note_to_clipboard">Copy note</string>
    <string name="note_copied_to_clipboard">Note copied to clipboard</string>
    <!-- Login details -->
    <string name="email_copied_to_clipboard">Email address copied</string>
    <string name="username_copied_to_clipboard">Username copied</string>
    <string name="password_copied_to_clipboard">Password copied</string>
    <string name="website_copied_to_clipboard">Web address copied</string>
    <string name="totp_copied_to_clipboard">TOTP copied</string>
    <string name="field_copied_to_clipboard">Field copied</string>
    <string name="move_item_to_trash_message">Item moved to trash</string>
    <string name="error_move_item_to_trash_message">Error moving to trash</string>
    <string name="item_permanently_deleted_message">Item permanently deleted</string>
    <string name="item_permanently_deleted_message_error">Error deleting item</string>
    <string name="item_restored_message">Item restored</string>
    <string name="item_restored_message_error">Error restoring item</string>
    <string name="item_monitor_exclude_message">Item successfully excluded from monitoring</string>
    <string name="item_monitor_exclude_message_error">There was an error excluding item from monitoring</string>
    <string name="item_monitor_include_message">Item successfully included in monitoring</string>
    <string name="item_monitor_include_message_error">There was an error including item in monitoring</string>
    <string name="alias_change_status_error">There was an error changing the alias status</string>
    <string name="login_item_generate_totp_error">Error generating 2FA code</string>
    <string name="login_item_view_alias_button">View alias</string>
    <string name="login_item_monitor_widget_weak_pass_title">Weak Password</string>
    <string name="login_item_monitor_widget_weak_pass_subtitle">This account is vulnerable, visit the service and change your password.</string>
    <plurals name="login_item_monitor_widget_reused_pass_title">
        <item quantity="one">%d other login uses the same password</item>
        <item quantity="other">%d other logins use the same password</item>
    </plurals>
    <string name="login_item_monitor_widget_missing_two_fa_title">Set up 2FA for more security</string>
    <string name="login_item_monitor_widget_missing_two_fa_subtitle">This service offers 2FA. Enable it for added account security.</string>
    <string name="login_item_reused_passwords_subtitle">Items from your vaults that use this password.</string>
    <string name="field_email">Email address</string>
    <string name="field_username">Username</string>
    <string name="field_username_or_email">Username or email address</string>
    <string name="field_password">Password</string>
    <string name="websites_section_title">Websites</string>
    <string name="totp_section_title">2FA token (TOTP)</string>
    <string name="action_reveal_password">Reveal password</string>
    <string name="action_conceal_password">Conceal password</string>
    <string name="action_reveal_number">Reveal number</string>
    <string name="action_conceal_number">Conceal number</string>
    <string name="share_button_content_description">Open share button</string>
    <string name="open_menu_icon_content_description">Open menu button</string>
    <string name="mfa_limit_reached">2FA limit reached</string>
    <string name="mfa_icon_content_description">2FA icon</string>
    <string name="custom_field_text_icon_description">Text custom field</string>
    <string name="custom_field_hidden_icon_description">Hidden custom field</string>
    <string name="custom_field_totp_icon_description">2FA custom field</string>
    <!-- Credit card details -->
    <string name="credit_card_cardholder_field_name">Name on card</string>
    <string name="credit_card_number_field_name">Card number</string>
    <string name="credit_card_cvv_field_name">Security code</string>
    <string name="credit_card_pin_field_name">PIN code</string>
    <string name="credit_card_expiration_date_field_name">Expiration date</string>
    <string name="credit_card_cardholder_copied_to_clipboard">Cardholder copied to clipboard</string>
    <string name="credit_card_number_copied_to_clipboard">Card number copied to clipboard</string>
    <string name="credit_card_verifcation_number_copied_to_clipboard">Security code copied to clipboard</string>
    <!-- Bottomsheet -->
    <string name="move_to_trash_item_detail_bottom_sheet">Move to trash</string>
    <string name="migrate_item_detail_bottom_sheet">Move to another vault</string>
    <!-- More info -->
    <string name="date_today">Today %s</string>
    <string name="date_yesterday">Yesterday %s</string>
    <!--
    Pattern used when displaying a date in the same year as we are.
    It would translate to
    12 February 12:34
    -->
    <string name="date_full_date_format">dd LLLL HH:mm</string>
    <!--
    Pattern used when displaying a date including the year.
    It would translate to
    12 February 2023 12:34
    -->
    <string name="date_full_date_format_with_year">dd LLLL yyyy HH:mm</string>
    <string name="item_detail_cannot_perform_action_edit_title">Cannot edit</string>
    <string name="item_detail_cannot_perform_action_edit_no_permissions_message">You cannot edit this item because you don\'t have enough permissions to do so.</string>
    <string name="item_detail_cannot_perform_action_edit_needs_upgrade_message">You are only allowed to edit items in your oldest vaults. In order to edit this item, please upgrade your current plan.</string>
    <string name="item_detail_cannot_perform_action_edit_item_in_trash_message">You cannot edit this item because it\'s in the trash. Please move it out of the trash before editing it.</string>
    <string name="item_detail_cannot_perform_action_share_no_permissions_title">Cannot share</string>
    <string name="item_detail_cannot_perform_action_share_no_permissions_message">You don\'t have enough permissions to share this vault.</string>
    <string name="item_detail_cannot_perform_action_share_limit_reached">You have reached vault sharing limit. In order to share more vaults, please upgrade your current plan.</string>
    <string name="item_detail_cannot_perform_action_share_item_in_trash_message">You cannot share this item because it\'s in the trash. Please move it out of the trash before sharing it.</string>
    <string name="password_score_vulnerable">Vulnerable</string>
    <string name="password_score_weak">Weak</string>
    <string name="password_score_strong">Strong</string>
    <string name="passkey_detail_bottomsheet_title">Passkey</string>
    <string name="passkey_detail_bottomsheet_username">Username</string>
    <string name="passkey_detail_bottomsheet_domain">Domain</string>
    <string name="passkey_detail_bottomsheet_key">Key</string>
    <string name="passkey_detail_bottomsheet_created">Created</string>
    <string name="activity_in_last_two_weeks">Activity in the last 14 days</string>

    <string name="contacts">Contacts</string>
    <string name="contacts_section_description">To keep your personal email address hidden, you can create an alias contact that masks your address.</string>
    <string name="field_detail_display_name_title">Display name</string>
    <string name="display_name_section_description">The display name when sending an email from this alias.</string>

    <plurals name="alias_forwards_count">
        <item quantity="one">%1$s forward</item>
        <item quantity="other">%1$s forwards</item>
    </plurals>
    <plurals name="alias_replies_count">
        <item quantity="one">%1$s reply</item>
        <item quantity="other">%1$s replies</item>
    </plurals>
    <plurals name="alias_blocks_count">
        <item quantity="one">%1$s block</item>
        <item quantity="other">%1$s blocks</item>
    </plurals>

    <string name="open_with">Open with:</string>
    <string name="open_attachments_error">Could not open attachment</string>

</resources>
